--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,67 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(0, 0, 0);
+  color: aliceblue;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.form-container {
+  max-width: 500px;
+  padding: 20px;
+  background-color: #020202; /* Light grey background */
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(207, 198, 198, 0.1);
+  margin: 0 auto; /* Center the form container */
+  border:solid 1px #5e5c5c;
+}
+
+.form-container h2 {
+  text-align: center;
+  color: #d95d3f; /* Primary color for headers */
+  margin-bottom: 20px;
+}
+
+.form-container label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form-container input[type="text"],
+.form-container textarea {
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #5e5c5c;
+  border-radius: 5px;
+  background-color: #020202; /* White background for input fields */
+  font-size: 16px;
+  color: #333;
+}
+
+.form-container input[type="text"]:focus,
+.form-container textarea:focus {
+  border-color: #d95d3f; /* Focus border color */
+  outline: none;
+}
+
+.form-container button {
+  width: 100%;
+  padding: 10px;
+  background-color: #d95d3f; /* Button background color */
+  color: #fff; /* Button text color */
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.form-container button:hover {
+  background-color: #c04b32; /* Darker shade on hover */
 }
